fix layout issues

--- a/client/views/layout/layout.import.less
+++ b/client/views/layout/layout.import.less
@@ -1,9 +1,9 @@
 html, body {
-  height: 100%;
-  overflow: hidden;
+  //height: 100%;
+  //overflow: hidden;
 
 }
 
 .container {
-  height: 100%;
+  //height: 100%;
 }
